<resources>
    <string name="app_name">ŤukŤuk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="password">Heslo</string>
    <string name="logIn">Prihlásiť sa</string>
    <string name="registration">Registrovať sa</string>
    <string name="passwordAgain">Zopakujte heslo</string>
    <string name="birthday">Dátum narodenia</string>
    <string name="logOut">Odhlásiť sa</string>
    <string name="changePassword">Zmeniť heslo</string>
    <string name="userName">Meno používateľa</string>
    <string name="loginEmail">"Email prihláseného"</string>
    <string name="newPassword">Nové heslo</string>
    <string name="nameLabel">Meno</string>
    <string name="emailNotValid">E-mail nema spravny tvar</string>
    <string name="usernameIsUsed">Používateľské meno je už použité</string>
    <string name="emptyString"></string>
    <string name="url">http://api.mcomputing.eu/mobv/uploads/</string>
    <string name="removePhoto">Odstrániť fotografiu</string>
    <string name="addPhotoFromGallery">Pridať fotografiu z galérie</string>
    <string name="getPhoto">Pridať fotografiu pomocou fotoaparáta</string>
    <string name="close">Zavrieť</string>
    <string name="old_password">Aktuálne heslo</string>
</resources>