<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.tuktuk.LoginFragment">

        <!-- TODO: Update blank fragment layout -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="451dp"
                android:text="@string/password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="43dp"
                android:layout_height="30dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="212dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="163dp"
                android:layout_marginEnd="163dp"
                android:layout_marginBottom="311dp"
                android:text="@string/logIn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="83dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="193dp"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="17dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.53" />

            <Button
                android:id="@+id/registration"
                android:layout_width="172dp"
                android:layout_height="44dp"
                android:layout_marginStart="163dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="163dp"
                android:layout_marginBottom="204dp"
                android:text="@string/registration"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>