<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
        <variable
            name="registration"
            type="com.example.tuktuk.registration.RegistrationFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".registration.RegistrationFragment"
        android:id="@+id/registration_layout"
        android:background="@drawable/gradient_animation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_wave_5">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
                app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
                app:srcCompat="@drawable/ic_mail" />

            <!--            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="209dp"
                android:layout_height="168dp"
                app:layout_constraintBottom_toTopOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.539"
                tools:srcCompat="@drawable/blank_profile_picture_973460_640" />-->

            <Button
                android:id="@+id/logOutButton"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/logOut"
                android:textAlignment="center"
                android:textColor="@color/colorGradientCenter"
                app:layout_constraintBottom_toTopOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/changePswButton"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/changePassword"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toTopOf="@+id/logOutButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="100dp"
                android:src="@drawable/blank_profile_picture_973460_640"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/loginEmail"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/userName"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_image" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="105dp"
                android:layout_height="78dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/tuktuk_title" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>