<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="registration"
            type="com.example.tuktuk.RegistrationFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationFragment"
        android:id="@+id/registration_layout"
        android:background="@drawable/gradient_animation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_wave_4">


            <TextView
                android:id="@+id/password"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/newPassword"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/passwordInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.324" />

            <TextView
                android:id="@+id/passwordCheck"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/passwordAgain"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/passwordCheckInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.403" />


            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="216dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/passwordCheckInput"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/passwordCheck"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                app:layout_constraintVertical_bias="0.023" />

            <Button
                android:id="@+id/registerButton"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:text="@string/changePassword"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordCheckInput"
                app:layout_constraintVertical_bias="0.306" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>